2013-11-15  Aldy Hernandez  <aldyh@redhat.com>

	* c-c++-common/cilk-plus/PS: New directory.
	* g++.dg/cilk-plus/cilk-plus.exp: Run shared tests.
	* g++.dg/dg.exp: Run Cilk Plus tests.
	* gcc.dg/cilk-plus/cilk-plus.exp: Run shared tests.

2013-11-15  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.dg/vmx/3b-15.c: Revise for little endian.

2013-11-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/50262
	* gcc.dg/tree-ssa/alias-28.c: New testcase.
	* gcc.dg/strlenopt-1.c: Adjust.
	* gcc.dg/strlenopt-1f.c: Likewise.

2013-11-15  Richard Biener  <rguenther@suse.de>

	* gcc.dg/torture/20131115-1.c: New testcase.

2013-11-15  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/cpp/ucnid-9.c: New test.

2013-11-14  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/stack_usage1b.adb: New test.
	* gnat.dg/stack_usage1c.adb: Likewise.

2013-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gnat.dg/specs/addr1.ads: Revert the last change.
	* gnat.dg/specs/atomic1.ads: Likewise.

2013-11-14  Cong Hou  <congh@google.com>

	* gcc.dg/vect/vect-alias-check.c: Update.

2013-11-14  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57887
	* g++.dg/cpp0x/nsdmi-template3.C: New.
	* g++.dg/cpp0x/nsdmi-template4.C: Likewise.

2013-11-14  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.target/powerpc/ppc64-abi-1.c (stack_frame_t): Remove
	compiler and linker field if _CALL_ELF == 2.
	* gcc.target/powerpc/ppc64-abi-2.c (stack_frame_t): Likewise.
	* gcc.target/powerpc/ppc64-abi-dfp-1.c (stack_frame_t): Likewise.
	* gcc.dg/stack-usage-1.c (SIZE): Update value for _CALL_ELF == 2.

2013-11-14  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.target/powerpc/ppc64-abi-dfp-1.c (FUNC_START): New macro.
	(WRAPPER): Use it.
	* gcc.target/powerpc/no-r11-1.c: Skip on powerpc_elfv2.
	* gcc.target/powerpc/no-r11-2.c: Skip on powerpc_elfv2.
	* gcc.target/powerpc/no-r11-3.c: Skip on powerpc_elfv2.

2013-11-14  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
